update api layer - add 2 new API: AlphaVantage & Finnhub; some improvements to the existing api;